--- a/obs/src/static/css/default.css
+++ b/obs/src/static/css/default.css
@@ -40,7 +40,10 @@
 #memo {
   font-family: sans-serif;
   margin-top: 0px;
+  color: #07c607;
+  text-shadow: 1px 2px #242020;
 }
+
 #gif {
   display: none;
 }
