--- a/obs/src/static/css/default.css
+++ b/obs/src/static/css/default.css
@@ -32,18 +32,28 @@
   text-decoration: underline;
 }
 
+#gif {
+  display: none;
+  position: relative;
+  text-align: center;
+}
+
 #display {
-  color: #07c607;
-  text-shadow: 1px 2px #242020;
+  color: white;
+  font-family: "Open Sans";
+  font-size: 30px;
+  z-index: 6;
+  position: relative;
+  text-shadow: 0px 0px 1px #000, 0px 0px 2px #000, 0px 0px 3px #000, 0px 0px 4px #000, 0px 0px 5px #000;
+  text-align: center;
 }
 
 #memo {
-  font-family: sans-serif;
-  margin-top: 0px;
-  color: #07c607;
-  text-shadow: 1px 2px #242020;
-}
-
-#gif {
-  display: none;
+  color: #1acaa7;
+  font-family: "Open Sans";
+  font-size: 30px;
+  z-index: 6;
+  position: relative;
+  text-shadow: 0px 0px 1px #000, 0px 0px 2px #000, 0px 0px 3px #000, 0px 0px 4px #000, 0px 0px 5px #000;
+  text-align: center;
 }
