adding fade css

--- a/obs/src/static/css/default.css
+++ b/obs/src/static/css/default.css
@@ -32,6 +32,13 @@
   text-decoration: underline;
 }
 
+#obsNotification {
+  visibility: hidden; 
+  opacity: 0; 
+  transition: visibility 0s 2s, opacity 2s linear;
+}
+
+
 #gif {
   display: none;
   position: relative;
