--- a/obs/src/static/css/default.css
+++ b/obs/src/static/css/default.css
@@ -4,7 +4,6 @@
 }
 
 #gif {
-  display: none;
   position: relative;
   text-align: center;
 }
@@ -37,4 +36,33 @@
     0px 0px 4px #000,
     0px 0px 5px #000;
   text-align: center;
+}
+
+#obsNotification {
+  visibility: hidden;  
+  z-index: 1;
+}
+#obsNotification.show {
+  visibility: visible;
+  animation: fadeIn 0.5s, fadeOut 0.5s 4s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
 }
