--- a/obs/static/css/default.css
+++ b/obs/static/css/default.css
@@ -1,6 +1,7 @@
 #text {
-  font-family: monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 1.5rem;
+  color: #333;
 }
 
 #gif {
@@ -9,32 +10,20 @@
 }
 
 #display {
-  color: white;
-  font-family: "Open Sans";
+  color: #5a3d1c;
+  font-family: "Courier New", Courier, monospace;
   font-size: 30px;
   z-index: 6;
   position: relative;
-  text-shadow:
-    0px 0px 1px #000,
-    0px 0px 2px #000,
-    0px 0px 3px #000,
-    0px 0px 4px #000,
-    0px 0px 5px #000;
   text-align: center;
 }
 
 #memo {
-  color: #1acaa7;
-  font-family: "Open Sans";
+  color: #8b4513;
+  font-family: "Courier New", Courier, monospace;
   font-size: 30px;
   z-index: 6;
   position: relative;
-  text-shadow:
-    0px 0px 1px #000,
-    0px 0px 2px #000,
-    0px 0px 3px #000,
-    0px 0px 4px #000,
-    0px 0px 5px #000;
   text-align: center;
 }
 
